--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "drei": "^2.2.17",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-three-fiber": "^5.3.14",
+    "react-spring": "^8.0.27",
+    "three": "^0.124.0",
     "web-vitals": "^0.2.4"
   },
+  "homepage": ".",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "~/Documents/Code/ossutilmac64 cp -rf ./build oss://hjg-ink/r3f/prac01/"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +40,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "typescript": "^4.1.3"
   }
 }
